Fix navigation link and add trending topics section
Updated the navigation link and added a new section for trending topics.

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -10,7 +10,7 @@
       <ul>
         <li><a href="#musicrelease">Music Releases</a></li>
         <li><a href="#fashion">Fashion Trends</a></li>
-        <li><a href="#trendingtopic">Music Releases</a></li>
+        <li><a href="#trendingtopic">Trending Topics</a></li>
       </ul>
     </nav>
     
@@ -30,6 +30,15 @@
           <li>country aesthetic</li>
           <li>elevated sportswear (ex. Nike x SKIMS)</li>
         </ul>
+    </div>
+
+    <div id="trendingtopic">
+      <h2>Trending Topics</h2>
+      <ul>
+        <li>Diddy case</li>
+        <li>Love Island</li>
+        <li>Trump return & happenings</li>
+      </ul>
     </div>
   </body>
 </html>
