Revise heading and enhance content in index.html
Updated the main heading and added detailed descriptions for fashion trends and trending topics.

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -4,7 +4,7 @@
   </head>
 
   <body>
-    <h1>Cultural Trend Dashboard</h1>
+    <h1>2025 Cultural Trend Dashboard</h1>
 
     <nav>
       <ul>
@@ -26,19 +26,19 @@
     <div id="fashion">
       <h2>Fashion Trends</h2>
         <ul>
-          <li>baggy clothes</li>
-          <li>country aesthetic</li>
-          <li>elevated sportswear (ex. Nike x SKIMS)</li>
+          <li>Gen Z clung to baggy clothes (ironically) for their style expression as an embrace of 2000s nostalgia.</li>
+          <li>In light of conservatism dominating politics and digital discourse, culture harkened back to country aesthetics as a Hail Mary.</li>
+          <li>As Ozempic thrives, elevated sportswear like the Nike x SKIMS collaboration retained an aspirational je ne sais quoi.</li>
         </ul>
     </div>
 
     <div id="trendingtopic">
       <h2>Trending Topics</h2>
-      <ul>
-        <li>Diddy case</li>
-        <li>Love Island</li>
-        <li>Trump return & happenings</li>
-      </ul>
+        <ul>
+          <li>The Diddy case, trial, and sentencing took over the entire year from the start of the trial in May. Diddy was sentenced to two prostitution charges & as of today will be released in 2028.</li>
+          <li>Love Island captured the attention of Gen Z & Alpha in June and July as numerous viral catachphrases and stan wars created its proliferation.</li>
+          <li>Donald Trump returned to the White House for his second presidential term & spent the year rage baiting/inspiring the nation through his grand Truth Social posts and even grander legislation.</li>
+        </ul>
     </div>
   </body>
 </html>
