Add links to fashion trend descriptions in HTML
Still have "country aesthetics" to do

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -26,9 +26,9 @@
     <div id="fashion">
       <h2>Fashion Trends</h2>
         <ul>
-          <li>Gen Z clung to baggy clothes (ironically) for their style expression as an embrace of 2000s nostalgia.</li>
+          <li>Gen Z clung to <a href="https://www.trillmag.com/lifestyle/style/are-baggy-jeans-going-out-of-style/" target="_blank">baggy clothes</a> (ironically) for their style expression as an embrace of 2000s nostalgia.</li>
           <li>In light of conservatism dominating politics and digital discourse, culture harkened back to country aesthetics as a Hail Mary.</li>
-          <li>As Ozempic thrives, elevated sportswear like the Nike x SKIMS collaboration retained an aspirational je ne sais quoi.</li>
+          <li>As Ozempic thrives, elevated sportswear like the <a href="https://www.elle.com/fashion/shopping/a68044879/nike-skims-collaboration/" target="_blank>Nike x SKIMS collaboration</a> retained an aspirational je ne sais quoi.</li>
         </ul>
     </div>
 
