Add link to style.css

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -1,6 +1,7 @@
 <html>
   <head>
     <title>Cultural Trend Dashboard</title>
+    <link href='./style.css' rel='stylesheet'>
   </head>
 
   <body>
